--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -1,8 +1,6 @@
-{% extends "layout.html" %}
-
+{% extends 'base.html' %}
 {% block title %}Home{% endblock %}
-
 {% block content %}
-    <h2>Welcome to the K-pop Trading Card App</h2>
-    <p>This is the homepage of the K-pop Trading Card App.</p>
+<h2>Welcome to My App</h2>
+<p>Select a section from the navigation menu to view or manage entries.</p>
 {% endblock %}
